--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,8 @@
-[package]
-name = "sql_query_builder"
-version = "0.1.0"
-authors = ["Liam <nghenglim@gmail.com>"]
-edition = "2018"
+[workspace]
+members = [
+    "postgres_query_builder",
+    "postgres_query_builder_derive",
+]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
+[profile.release]
+debug = 2
