--- a/sqlink-derive/Cargo.toml
+++ b/sqlink-derive/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "postgres-query-builder-derive"
+name = "sqlink-derive"
 version = "0.1.0"
 authors = ["Liam <nghenglim@gmail.com>"]
 edition = "2018"
@@ -9,4 +9,4 @@ license = "MIT/Apache-2.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-postgres-query-builder = { path = "../postgres-query-builder" }
+sqlink = { path = "../sqlink" }
