--- a/sqlink-derive/Cargo.toml
+++ b/sqlink-derive/Cargo.toml
@@ -9,4 +9,4 @@ license = "MIT/Apache-2.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sqlink = "0.1.0"
+sqlink = { version = "0.1.0", path = "../sqlink" }
