--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -12,5 +12,7 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
+    - name: Build integrated
+      run: cd sqlink-test && cargo build --verbose
     - name: Test integrated
-      run: cd sqlink-test && docker-compose up && cargo test --verbose 
+      run: docker-compose up --detach && cargo test --verbose
