--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Build
-      run: cargo build --verbose
+      run: rustup update && cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
     - name: Build integrated
